infra/k8s/k8s-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: contoso-air
  labels:
    name: contoso-air
    environment: production
    project: contoso-air
  annotations:
    kubernetes.io/managed-by: "kubectl"
